besser/BUML/notations/action_language/BESSERActionLanguageParser.py
# Generated from D:/Projects/BESSER/besser/BUML/notations/action_language/BESSERActionLanguage.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class BESSERActionLanguageParser ( Parser ):

    grammarFileName = "BESSERActionLanguage.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'def'", "'('", "','", "')'", "'->'", 
                     "':'", "'='", "';'", "'while'", "'do'", "'for'", "'in'", 
                     "'{'", "'}'", "'if'", "'else'", "'return'", "'[]'", 
                     "'?'", "'['", "']'", "'any'", "'float'", "'str'", "'int'", 
                     "'bool'", "'nothing'", "'||'", "'&&'", "'=='", "'!='", 
                     "'<'", "'<='", "'>'", "'>='", "'instanceof'", "'+'", 
                     "'-'", "'*'", "'/'", "'%'", "'!'", "'??'", "'.'", "'this'", 
                     "'new'", "'true'", "'false'", "'null'", "'::'", "'..'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "ID", "INT", "FLOAT", "WS", "NL", "STR" ]

    RULE_function_definition = 0
    RULE_parameter = 1
    RULE_parameterWithDefault = 2
    RULE_statements = 3
    RULE_cond_loop = 4
    RULE_while = 5
    RULE_do_while = 6
    RULE_for = 7
    RULE_iterator = 8
    RULE_conditional_branch = 9
    RULE_block = 10
    RULE_condition = 11
    RULE_assign_target = 12
    RULE_explicit_declaration = 13
    RULE_assignment = 14
    RULE_return = 15
    RULE_type = 16
    RULE_single_type = 17
    RULE_sequence_type = 18
    RULE_optional_type = 19
    RULE_function_type = 20
    RULE_any_type = 21
    RULE_real_type = 22
    RULE_string_type = 23
    RULE_int_type = 24
    RULE_bool_type = 25
    RULE_nothing = 26
    RULE_classifier_type = 27
    RULE_expression = 28
    RULE_ternary = 29
    RULE_boolean = 30
    RULE_or = 31
    RULE_and = 32
    RULE_equality = 33
    RULE_comparison = 34
    RULE_instanceof = 35
    RULE_arithmetic = 36
    RULE_plus_minus = 37
    RULE_mult_div = 38
    RULE_remain = 39
    RULE_primary = 40
    RULE_selection_expression = 41
    RULE_field_access = 42
    RULE_array_access = 43
    RULE_function_call = 44
    RULE_atomic = 45
    RULE_procedure_call = 46
    RULE_this = 47
    RULE_new = 48
    RULE_literal = 49
    RULE_single_literal = 50
    RULE_int_literal = 51
    RULE_string_literal = 52
    RULE_bool_literal = 53
    RULE_real_literal = 54
    RULE_null_literal = 55
    RULE_enum_literal = 56
    RULE_sequence_literal = 57
    RULE_range_literal = 58
    RULE_symbol = 59

    ruleNames =  [ "function_definition", "parameter", "parameterWithDefault", 
                   "statements", "cond_loop", "while", "do_while", "for", 
                   "iterator", "conditional_branch", "block", "condition", 
                   "assign_target", "explicit_declaration", "assignment", 
                   "return", "type", "single_type", "sequence_type", "optional_type", 
                   "function_type", "any_type", "real_type", "string_type", 
                   "int_type", "bool_type", "nothing", "classifier_type", 
                   "expression", "ternary", "boolean", "or", "and", "equality", 
                   "comparison", "instanceof", "arithmetic", "plus_minus", 
                   "mult_div", "remain", "primary", "selection_expression", 
                   "field_access", "array_access", "function_call", "atomic", 
                   "procedure_call", "this", "new", "literal", "single_literal", 
                   "int_literal", "string_literal", "bool_literal", "real_literal", 
                   "null_literal", "enum_literal", "sequence_literal", "range_literal", 
                   "symbol" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    ID=52
    INT=53
    FLOAT=54
    WS=55
    NL=56
    STR=57

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Function_definitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.name = None # Token
            self._parameter = None # ParameterContext
            self.params = list() # of ParameterContexts
            self._parameterWithDefault = None # ParameterWithDefaultContext
            self.paramsDefault = list() # of ParameterWithDefaultContexts
            self.return_type = None # TypeContext
            self.body = None # BlockContext

        def ID(self):
            return self.getToken(BESSERActionLanguageParser.ID, 0)

        def block(self):
            return self.getTypedRuleContext(BESSERActionLanguageParser.BlockContext,0)


        def type_(self):
            return self.getTypedRuleContext(BESSERActionLanguageParser.TypeContext,0)


        def parameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BESSERActionLanguageParser.ParameterContext)
            else:
                return self.getTypedRuleContext(BESSERActionLanguageParser.ParameterContext,i)


        def parameterWithDefault(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BESSERActionLanguageParser.ParameterWithDefaultContext)
            else:
                return self.getTypedRuleContext(BESSERActionLanguageParser.ParameterWithDefaultContext,i)


        def getRuleIndex(self):
            return BESSERActionLanguageParser.RULE_function_definition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_definition" ):
                listener.enterFunction_definition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_definition" ):
                listener.exitFunction_definition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction_definition" ):
                return visitor.visitFunction_definition(self)
            else:
                return visitor.visitChildren(self)




    def function_definition(self):

        localctx = BESSERActionLanguageParser.Function_definitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_function_definition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.match(BESSERActionLanguageParser.T__0)
            self.state = 121
            localctx.name = self.match(BESSERActionLanguageParser.ID)
            self.state = 122
            self.match(BESSERActionLanguageParser.T__1)
            self.state = 146
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 123
                localctx._parameter = self.parameter()
                localctx.params.append(localctx._parameter)
                self.state = 128
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 124
                        self.match(BESSERActionLanguageParser.T__2)
                        self.state = 125
                        localctx._parameter = self.parameter()
                        localctx.params.append(localctx._parameter) 
                    self.state = 130
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

                self.state = 135
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==3:
                    self.state = 131
                    self.match(BESSERActionLanguageParser.T__2)
                    self.state = 132
                    localctx._parameterWithDefault = self.parameterWithDefault()
                    localctx.paramsDefault.append(localctx._parameterWithDefault)
                    self.state = 137
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)


            elif la_ == 2:
                self.state = 138
                localctx._parameterWithDefault = self.parameterWithDefault()
                localctx.paramsDefault.append(localctx._parameterWithDefault)
                self.state = 143
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==3:
                    self.state = 139
                    self.match(BESSERActionLanguageParser.T__2)
                    self.state = 140
                    localctx._parameterWithDefault = self.parameterWithDefault()
                    localctx.paramsDefault.append(localctx._parameterWithDefault)
                    self.state = 145
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 148
            self.match(BESSERActionLanguageParser.T__3)
            self.state = 151
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==5:
                self.state = 149
                self.match(BESSERActionLanguageParser.T__4)
                self.state = 150
                localctx.return_type = self.type_()


            self.state = 153
            localctx.body = self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.name = None # Token
            self.declared_type = None # TypeContext

        def ID(self):
            return self.getToken(BESSERActionLanguageParser.ID, 0)

        def type_(self):
            return self.getTypedRuleContext(BESSERActionLanguageParser.TypeContext,0)


        def getRuleIndex(self):
            return BESSERActionLanguageParser.RULE_parameter

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameter" ):
                listener.enterParameter(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameter" ):
                listener.exitParameter(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameter" ):
                return visitor.visitParameter(self)
            else:
                return visitor.visitChildren(self)




    def parameter(self):

        localctx = BESSERActionLanguageParser.ParameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_parameter)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            localctx.name = self.match(BESSERActionLanguageParser.ID)
            self.state = 156
            self.match(BESSERActionLanguageParser.T__5)
            self.state = 157
            localctx.declared_type = self.type_()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterWithDefaultContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.name = None # Token
            self.declared_type = None # TypeContext
            self.expr = None # ExpressionContext

        def ID(self):
            return self.getToken(BESSERActionLanguageParser.ID, 0)

        def type_(self):
            return self.getTypedRuleContext(BESSERActionLanguageParser.TypeContext,0)


        def expression(self):
            return self.getTypedRuleContext(BESSERActionLanguageParser.ExpressionContext,0)


        def getRuleIndex(self):
            return BESSERActionLanguageParser.RULE_parameterWithDefault

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameterWithDefault" ):
                listener.enterParameterWithDefault(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameterWithDefault" ):
                listener.exitParameterWithDefault(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameterWithDefault" ):
                return visitor.visitParameterWithDefault(self)
            else:
                return visitor.visitChildren(self)




    def parameterWithDefault(self):

        localctx = BESSERActionLanguageParser.ParameterWithDefaultContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_parameterWithDefault)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 159
            localctx.name = self.match(BESSERActionLanguageParser.ID)
            self.state = 160
            self.match(BESSERActionLanguageParser.T__5)
            self.state = 161
            localctx.declared_type = self.type_()
            self.state = 162
            self.match(BESSERActionLanguageParser.T__6)
            self.state = 163
            localctx.expr = self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def cond_loop(self):
            return self.getTypedRuleContext(BESSERActionLanguageParser.Cond_loopContext,0)


        def for_(self):
            return self.getTypedRuleContext(BESSERActionLanguageParser.ForContext,0)


        def condition(self):
            return self.getTypedRuleContext(BESSERActionLanguageParser.ConditionContext,0)


        def return_(self):
            return self.getTypedRuleContext(BESSERActionLanguageParser.ReturnContext,0)


        def function_definition(self):
            return self.getTypedRuleContext(BESSERActionLanguageParser.Function_definitionContext,0)


        def assignment(self):
            return self.getTypedRuleContext(BESSERActionLanguageParser.AssignmentContext,0)


        def expression(self):
            return self.getTypedRuleContext(BESSERActionLanguageParser.ExpressionContext,0)


        def getRuleIndex(self):
            return BESSERActionLanguageParser.RULE_statements

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatements" ):
                listener.enterStatements(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatements" ):
                listener.exitStatements(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatements" ):
                return visitor.visitStatements(self)
            else:
                return visitor.visitChildren(self)




    def statements(self):

        localctx = BESSERActionLanguageParser.StatementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_statements)
        try:
            self.state = 174
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 165
                self.cond_loop()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 166
                self.for_()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 167
                self.condition()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 168
                self.return_()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 169
                self.function_definition()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 170
                self.assignment()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 171
                self.expression()
                self.state = 172
                self.match(BESSERActionLanguageParser.T__7)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Cond_loopContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def while_(self):
            return self.getTypedRuleContext(BESSERActionLanguageParser.WhileContext,0)


        def do_while(self):
            return self.getTypedRuleContext(BESSERActionLanguageParser.Do_whileContext,0)


        def getRuleIndex(self):
            return BESSERActionLanguageParser.RULE_cond_loop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCond_loop" ):
                listener.enterCond_loop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCond_loop" ):
                listener.exitCond_loop(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCond_loop" ):
                return visitor.visitCond_loop(self)
            else:
                return visitor.visitChildren(self)




    def cond_loop(self):

        localctx = BESSERActionLanguageParser.Cond_loopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_cond_loop)
        try:
            self.state = 178
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [9]:
                self.enterOuterAlt(localctx, 1)
                self.state = 176
                self.while_()
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 2)
                self.state = 177
                self.do_while()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.cond = None # ExpressionContext
            self.body = None # BlockContext

        def expression(self):
            return self.getTypedRuleContext(BESSERActionLanguageParser.ExpressionContext,0)


        def block(self):
            return self.getTypedRuleContext(BESSERActionLanguageParser.BlockContext,0)


        def getRuleIndex(self):
            return BESSERActionLanguageParser.RULE_while

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhile" ):
                listener.enterWhile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhile" ):
                listener.exitWhile(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhile" ):
                return visitor.visitWhile(self)
            else:
                return visitor.visitChildren(self)




    def while_(self):

        localctx = BESSERActionLanguageParser.WhileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_while)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 180
            self.match(BESSERActionLanguageParser.T__8)
            self.state = 181
            self.match(BESSERActionLanguageParser.T__1)
            self.state = 182
            localctx.cond = self.expression()
            self.state = 183
            self.match(BESSERActionLanguageParser.T__3)
            self.state = 184
            localctx.body = self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Do_whileContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.body = None # BlockContext
            self.cond = None # ExpressionContext

        def block(self):
            return self.getTypedRuleContext(BESSERActionLanguageParser.BlockContext,0)


        def expression(self):
            return self.getTypedRuleContext(BESSERActionLanguageParser.ExpressionContext,0)


        def getRuleIndex(self):
            return BESSERActionLanguageParser.RULE_do_while

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDo_while" ):
                listener.enterDo_while(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDo_while" ):
                listener.exitDo_while(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDo_while" ):
                return visitor.visitDo_while(self)
            else:
                return visitor.visitChildren(self)




    def do_while(self):

        localctx = BESSERActionLanguageParser.Do_whileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_do_while)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 186
            self.match(BESSERActionLanguageParser.T__9)
            self.state = 187
            localctx.body = self.block()
            self.state = 188
            self.match(BESSERActionLanguageParser.T__8)
            self.state = 189
            self.match(BESSERActionLanguageParser.T__1)
            self.state = 190
            localctx.cond = self.expression()
            self.state = 191
            self.match(BESSERActionLanguageParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._iterator = None # IteratorContext
            self.iterators = list() # of IteratorContexts
            self.body = None # BlockContext

        def iterator(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BESSERActionLanguageParser.IteratorContext)
            else:
                return self.getTypedRuleContext(BESSERActionLanguageParser.IteratorContext,i)


        def block(self):
            return self.getTypedRuleContext(BESSERActionLanguageParser.BlockContext,0)


        def getRuleIndex(self):
            return BESSERActionLanguageParser.RULE_for

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFor" ):
                listener.enterFor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFor" ):
                listener.exitFor(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFor" ):
                return visitor.visitFor(self)
            else:
                return visitor.visitChildren(self)




    def for_(self):

        localctx = BESSERActionLanguageParser.ForContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_for)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 193
            self.match(BESSERActionLanguageParser.T__10)
            self.state = 194
            self.match(BESSERActionLanguageParser.T__1)
            self.state = 195
            localctx._iterator = self.iterator()
            localctx.iterators.append(localctx._iterator)
            self.state = 200
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==3:
                self.state = 196
                self.match(BESSERActionLanguageParser.T__2)
                self.state = 197
                localctx._iterator = self.iterator()
                localctx.iterators.append(localctx._iterator)
                self.state = 202
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 203
            self.match(BESSERActionLanguageParser.T__3)
            self.state = 204
            localctx.body = self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IteratorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.var_name = None # SymbolContext
            self.sequence = None # ExpressionContext

        def symbol(self):
            return self.getTypedRuleContext(BESSERActionLanguageParser.SymbolContext,0)


        def expression(self):
            return self.getTypedRuleContext(BESSERActionLanguageParser.ExpressionContext,0)


        def getRuleIndex(self):
            return BESSERActionLanguageParser.RULE_iterator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIterator" ):
                listener.enterIterator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIterator" ):
                listener.exitIterator(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIterator" ):
                return visitor.visitIterator(self)
            else:
                return visitor.visitChildren(self)




    def iterator(self):

        localctx = BESSERActionLanguageParser.IteratorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_iterator)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 206
            localctx.var_name = self.symbol()
            self.state = 207
            self.match(BESSERActionLanguageParser.T__11)
            self.state = 208
            localctx.sequence = self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Conditional_branchContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block(self):
            return self.getTypedRuleContext(BESSERActionLanguageParser.BlockContext,0)


        def condition(self):
            return self.getTypedRuleContext(BESSERActionLanguageParser.ConditionContext,0)


        def getRuleIndex(self):
            return BESSERActionLanguageParser.RULE_conditional_branch

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConditional_branch" ):
                listener.enterConditional_branch(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConditional_branch" ):
                listener.exitConditional_branch(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConditional_branch" ):
                return visitor.visitConditional_branch(self)
            else:
                return visitor.visitChildren(self)




    def conditional_branch(self):

        localctx = BESSERActionLanguageParser.Conditional_branchContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_conditional_branch)
        try:
            self.state = 212
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [13]:
                self.enterOuterAlt(localctx, 1)
                self.state = 210
                self.block()
                pass
            elif token in [15]:
                self.enterOuterAlt(localctx, 2)
                self.state = 211
                self.condition()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._statements = None # StatementsContext
            self.stmts = list() # of StatementsContexts

        def statements(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BESSERActionLanguageParser.StatementsContext)
            else:
                return self.getTypedRuleContext(BESSERActionLanguageParser.StatementsContext,i)


        def getRuleIndex(self):
            return BESSERActionLanguageParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):
